6990106: FindBugs scan - Malicious code vulnerability Warnings in com.sun.java.util.jar.pack.*
Reviewed-by: mduigou, briangoetz